--- a/_config.yml
+++ b/_config.yml
@@ -13,17 +13,11 @@ favicon: /favicon.ico
 keywords: C,PHP
 
 home_nav:
-  - name: Blog
+  - name: 文字
     url: /categories
     target_blank: false #不在新页面打开
-  - name: Project
-    url: /project/
-    target_blank: true #在新页面打开
-  - name: Github
+  - name: 代码
     url: https://github.com/funsoul
-    target_blank: true
-  - name: Twitter
-    url: https://twitter.com/funsoul18
     target_blank: true
 
 # config page nav
