--- a/_config.yml
+++ b/_config.yml
@@ -164,7 +164,7 @@ about:
   - type: me
     icon: icon-user
     text_value:
-    - "nothinggonachangemyworld"
+    - "微信公众号：有趣的EOF"
   - type: Github
     icon: icon-github
     text_key: Github
